--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 html{
     font-family:Arial,Helvetica, sans-serif;
+    background-color:#f4f4f4;
 }
+    .container{
+        width:80%;
+        margin:auto;
+    }
