--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     font-family:Arial,Helvetica, sans-serif;
-    background-color:#f4f4f4;
+    background-color:#e6f7ff;
 }
     .container{
         width:80%;
@@ -12,10 +12,23 @@ html{
                     border-radius: 60px;
                     padding:2px 8px 2px 8px;
                     background-color: #99e7ff;
+                    border:2px solid #005780;
     }
     li{ background-color: #80ccff;
         margin-bottom: 10px;
         padding:5px 10px 5px 10px;
         border:2px solid black;
         border-radius:5px;
+        font-weight: bold;
     }
+    h1{text-align: center;
+    }
+    ul{
+        list-style: none;
+        padding:5px;
+        margin:15px;
+        background-color: white;
+        box-shadow:15px 10px 10px grey; 
+        
+    }
+    
