link show.html to index.html

--- a/style.css
+++ b/style.css
@@ -31,5 +31,5 @@ html{
         box-shadow:15px 10px 10px #cccccc; 
         
     }
-    img{ width: 80px;}
+    #homework-gif{ width: 80px;}
     
